# gst-video-reconf-demo

./: meson.build  submodules.txt
src/: camera.cpp  display.cpp  protocol.hpp
